<resources>
    <string name="app_name">LaikipiaEattendanceSystem</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="attendance_system">Attendance System</string>
    <string name="info_attendancesystem_com">info@attendancesystem.com</string>
    <string name="home">Home</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="viewattendance">ViewAttendance</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="contact_lecturer">Contact Lecturer</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="view_attendance">View Attendance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="laikipia_e_attendance_system">laikipia E-Attendance System</string>
    <string name="receiver_s_email_address">Receiver\'s Email Address!</string>
    <string name="compose_email">Compose Email</string>
    <string name="send">Send</string>
    <string name="attachment">attachment</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="lecturer_email_address">Lecturer Email Address</string>
    <string name="settings">Settings</string>
    <string name="delete_student">Delete Student</string>
    <string name="add_student">Add Student</string>
    <string name="viewattendance">ViewAttendance</string>
    <string name="markattendance">MarkAttendance</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remeber_me">Remeber me</string>
    <string name="login">Login</string>
</resources>